# CellularLife

./: .gitignore  CMakeLists.txt  Cell.cpp  Grid.h  Simulation.cpp  main.cpp
Src/: Cell.h  Grid.cpp  Simulation.h
